--- a/drivers/firmware/qcom/Kconfig
+++ b/drivers/firmware/qcom/Kconfig
@@ -41,6 +41,13 @@ config QCOM_TZMEM_MODE_SHMBRIDGE
 
 endchoice
 
+config QCOM_SCM_ADDON
+	bool "Qualcomm SCM Addon Support"
+	depends on QCOM_SCM
+	help
+	  QCOM SCM addon provision APIs for client like kgsl, SHMBridge, etc,
+	  once enable it provides extra API via QCOM_SCM.
+
 config QCOM_QSEECOM
 	bool "Qualcomm QSEECOM interface driver"
 	depends on QCOM_SCM=y
