UBUNTU: SAUCE: Add Makefile code to apply overlays for GA1.4
Apply external DTBO onto the in-tree base DTB.

Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -312,3 +312,77 @@ dtb-$(CONFIG_ARCH_QCOM)	+= x1e80100-addons-crd.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= x1e80100-crd.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= x1e80100-addons-qcp.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= x1e80100-qcp.dtb
+
+# External overlays
+dtb-$(CONFIG_ARCH_QCOM) += qcs6490-addons-rb3gen2-video-mezz-ovl.dtb
+qcs6490-addons-rb3gen2-video-mezz-ovl-dtbs := \
+    qcs6490-addons-rb3gen2-video-mezz.dtb \
+    qcm6490-graphics.dtbo \
+    qcm6490-camera-rb3.dtbo \
+    qcm6490-video.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM) += qcs6490-addons-rb3gen2-vision-mezz-ovl.dtb
+qcs6490-addons-rb3gen2-vision-mezz-ovl-dtbs := \
+    qcs6490-addons-rb3gen2-vision-mezz.dtb \
+    qcm6490-graphics.dtbo \
+    qcm6490-camera-rb3.dtbo \
+    qcm6490-video.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM) += qcs5430-fp1-addons-rb3gen2-vision-mezz-ovl.dtb
+qcs5430-fp1-addons-rb3gen2-vision-mezz-ovl-dtbs := \
+    qcs5430-fp1-addons-rb3gen2-vision-mezz.dtb \
+    qcs5430-graphics.dtbo \
+    qcm5430-camera-rb3.dtbo \
+    qcm6490-video.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM) += qcs5430-fp2-addons-rb3gen2-vision-mezz-ovl.dtb
+qcs5430-fp2-addons-rb3gen2-vision-mezz-ovl-dtbs := \
+    qcs5430-fp2-addons-rb3gen2-vision-mezz.dtb \
+    qcs5430-graphics.dtbo \
+    qcm5430-camera-rb3.dtbo \
+    qcm6490-video.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM) += qcs5430-fp2p5-addons-rb3gen2-vision-mezz-ovl.dtb
+qcs5430-fp2p5-addons-rb3gen2-vision-mezz-ovl-dtbs := \
+    qcs5430-fp2p5-addons-rb3gen2-vision-mezz.dtb \
+    qcs5430-graphics.dtbo \
+    qcm5430-camera-rb3.dtbo \
+    qcm6490-video.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM) += qcs5430-fp3-addons-rb3gen2-vision-mezz-ovl.dtb
+qcs5430-fp3-addons-rb3gen2-vision-mezz-ovl-dtbs := \
+    qcs5430-fp3-addons-rb3gen2-vision-mezz.dtb \
+    qcs5430-graphics.dtbo \
+    qcm5430-camera-rb3.dtbo \
+    qcm6490-video.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM) += qcs9100-addons-ride-ovl.dtb
+qcs9100-addons-ride-ovl-dtbs := \
+    qcs9100-addons-ride.dtb \
+    sa8775p-video.dtbo \
+    qcs9100-graphics.dtbo \
+    qcs9100-ride-sx-camera.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM) += qcs9100-addons-ride-r3-ovl.dtb
+qcs9100-addons-ride-r3-ovl-dtbs := \
+    qcs9100-addons-ride-r3.dtb \
+    sa8775p-video.dtbo \
+    qcs9100-graphics.dtbo \
+    qcs9100-ride-sx-camera.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM) += qcs9075-addons-rb8-ovl.dtb
+qcs9075-addons-rb8-ovl-dtbs := \
+    qcs9075-addons-rb8.dtb \
+    sa8775p-video.dtbo \
+    qcs9100-graphics.dtbo \
+    qcs9075-camera-rb8.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM)	+= combined-dtb.dtb
+
+dtbs-to-combined := $(filter %-ovl.dtb, $(dtb-y))
+
+quiet_cmd_cat = CAT     $@
+      cmd_cat = cat $(real-prereqs) > $@
+
+$(obj)/combined-dtb.dtb: $(addprefix $(obj)/, $(filter %-ovl.dtb, $(dtb-y))) FORCE
+	$(call if_changed,cat)
