FROMLIST: soc: qcom: Add qcom_rproc_minidump module
Add qcom_rproc_minidump module in a preparation to remove
minidump specific code from driver/remoteproc/qcom_common.c
and provide needed exported API, this as well helps to
abstract minidump specific data layout from qualcomm's
remoteproc driver.

It is just a copying of qcom_minidump() functionality from
driver/remoteproc/qcom_common.c into a separate file under
qcom_rproc_minidump().

Change-Id: I208ddc97561e66a6870377bf041aa42d2f06080f
Signed-off-by: Mukesh Ojha <quic_mojha@quicinc.com>
Link: https://lore.kernel.org/lkml/20240131110837.14218-3-quic_mojha@quicinc.com/
Signed-off-by: Mukesh Ojha <mukesh.ojha@oss.qualcomm.com>
(cherry picked from commit 37b11d9e99f50ecc744189158c35a94827c28d48)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -394,4 +394,14 @@ config USB_F_QDSS
 	  application SW messaging and transferring it to the host machine
 	  to which the device is connected.
 
+config QCOM_RPROC_MINIDUMP
+	tristate "QCOM Remoteproc Minidump Support"
+	depends on ARCH_QCOM || COMPILE_TEST
+	depends on QCOM_SMEM
+	help
+	  Enablement of core Minidump feature is controlled from boot firmware
+	  side, so if it is enabled from firmware, this config allow Linux to
+	  query predefined Minidump segments associated with the remote processor
+	  and check its validity and end up collecting the dump on remote processor
+	  crash during its recovery.
 endmenu
