FROMLIST: soc: qcom: Add Qualcomm APSS minidump kernel driver
Minidump is a best effort mechanism to collect useful and predefined
data for first level of debugging on end user devices running on
Qualcomm SoCs. It is built on the premise that System on Chip (SoC)
or subsystem part of SoC crashes, due to a range of hardware and
software bugs. Hence, the ability to collect accurate data is only
a best-effort. The data collected could be invalid or corrupted,
data collection itself could fail, and so on.

Qualcomm devices in engineering mode provides a mechanism for
generating full system ramdumps for post mortem debugging. But in some
cases it's however not feasible to capture the entire content of RAM.
Minidump mechanism provides the means for selecting region should
be included in the ramdump. The solution supports extracting the
Ramdump/Minidump produced either over USB or stored to an attached
storage device.

The core of Minidump feature is part of Qualcomm's boot firmware code.
It initializes shared memory (SMEM), which is a part of RAM and
allocates a small section of it to Minidump table i.e also called
global table of content (G-ToC). Each subsystem (APSS, ADSP, ...) has
their own table of segments to be included in the Minidump, all
references from a descriptor in SMEM (G-ToC). Each segment/region has
some details like name, physical address and it's size etc. and it
could be anywhere scattered in the DDR.

To simplify post mortem debugging, it creates and maintain an ELF
header as first region that gets updated upon registration
of a new region.

Minidump driver currently registers all the existing pstore(ramoops)
records like dmesg, ftrace, console, pmesg in the table so that they
get captured on system crash.

Change-Id: I574e09490b190201f9bdd071133dc942e72a046f
Signed-off-by: Mukesh Ojha <quic_mojha@quicinc.com>
Link: https://lore.kernel.org/lkml/20240131110837.14218-7-quic_mojha@quicinc.com/
Signed-off-by: Mukesh Ojha <mukesh.ojha@oss.qualcomm.com>
(che

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -404,4 +404,21 @@ config QCOM_RPROC_MINIDUMP
 	  query predefined Minidump segments associated with the remote processor
 	  and check its validity and end up collecting the dump on remote processor
 	  crash during its recovery.
+
+config QCOM_MINIDUMP
+	tristate "QCOM APSS Minidump driver"
+	depends on ARCH_QCOM || COMPILE_TEST
+	depends on QCOM_SMEM
+	select PSTORE_RAM
+	help
+	  This configuration enables the Linux core infrastructure for the
+	  Application Processor Subsystem (APSS) Minidump collection.
+	  Specifically, it allows Linux client drivers to proactively register
+	  their internal data structures and debug messages as part of the
+	  APSS Minidump table. When the SoC (System on Chip) crashes, only
+	  these selective regions will be dumped instead of the entire RAM dump.
+	  This optimization saves a significant amount of time and storage space.
+
+	  This has dependency on PSTORE RAM for collecting the ramoops region with
+	  APSS Minidump.
 endmenu
