PENDING: arm64: dts: qcom: Add HS Phy node to EUD for SC7280
EUD being a high-speed hub relies on HS Phy for its functionality.
Add the relevant phy node.

Change-Id: I9defdd75012d3810f2861e014533b75d8190713a
Signed-off-by: Elson Roy Serrao <quic_eserrao@quicinc.com>
Signed-off-by: Krishna Kurapati <krishna.kurapati@oss.qualcomm.com>
(cherry picked from commit bdf753d3388a7bd39ce870ebefcc71b4bbe356ca)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/sc7280.dtsi
+++ b/arch/arm64/boot/dts/qcom/sc7280.dtsi
@@ -5594,6 +5594,8 @@
 			      <0 0x88e2000 0 0x1000>;
 			interrupts-extended = <&pdc 11 IRQ_TYPE_LEVEL_HIGH>;
 
+			phys = <&usb_1_hsphy>;
+			phy-names = "usb2-phy";
 			status = "disabled";
 
 			ports {
