--- a/ubuntu/qcom/camera/Kbuild
+++ b/ubuntu/qcom/camera/Kbuild
@@ -1,8 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0-only
 
-$(info "CAMERA_KERNEL_ROOT is: $(CAMERA_KERNEL_ROOT)")
-$(info "KERNEL_ROOT is: $(KERNEL_ROOT)")
-$(info "CAMERA_ARCH is: $(CAMERA_ARCH)")
+#$(info "CAMERA_KERNEL_ROOT is: $(CAMERA_KERNEL_ROOT)")
+#$(info "KERNEL_ROOT is: $(KERNEL_ROOT)")
+#$(info "CAMERA_ARCH is: $(CAMERA_ARCH)")
 
 # Include Architecture configurations
 ifdef CAMERA_ARCH
