QCLINUX: arm64: defconfig: Enable Tracer Configs
Enable kernel tracers: Scheduling Latency, Hardware Latencies,
Timerlat and OS Noise for gen4auto and gen5auto.

Change-Id: I797c2ded2da4ee4b302e1c4ddb9e9a1fe987320f
Signed-off-by: Kaisheng Yang <quic_kaisheng@quicinc.com>
(cherry picked from commit ecb12a4c4b6f1803c847e96f7f22bfb30f782dc8)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/configs/qcom_gen5auto_debug.config
+++ b/arch/arm64/configs/qcom_gen5auto_debug.config
@@ -67,6 +67,7 @@ CONFIG_PROVE_RCU=y
 CONFIG_RCU_CPU_STALL_CPUTIME=y
 CONFIG_SCHED_TRACER=y
 CONFIG_SOFTLOCKUP_DETECTOR=y
+CONFIG_STACK_TRACER=y
 # CONFIG_TEST_DYNAMIC_DEBUG is not set
 CONFIG_TIMERLAT_TRACER=y
 CONFIG_TRACER_MAX_TRACE=y
