--- a/arch/arm64/configs/qcom_gen4auto_debug.config
+++ b/arch/arm64/configs/qcom_gen4auto_debug.config
@@ -13,11 +13,15 @@ CONFIG_DMABUF_SYSFS_STATS=y
 CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_FW_LOADER_DEBUG is not set
 CONFIG_HARDLOCKUP_DETECTOR=y
+CONFIG_HWLAT_TRACER=y
 CONFIG_LOCALVERSION="-debug"
 CONFIG_MAC80211_DEBUGFS=y
 CONFIG_PAGE_POISONING=y
 CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_PM_DEBUG=y
+CONFIG_SCHED_TRACER=y
 CONFIG_SERIAL_QCOM_GENI_CONSOLE=y
 CONFIG_SOFTLOCKUP_DETECTOR=y
+CONFIG_STACK_TRACER=y
 # CONFIG_TEST_DYNAMIC_DEBUG is not set
+CONFIG_TIMERLAT_TRACER=y
