PENDING: arm64: dts: qcom: sa8255p: Enable USB role switch
Enable usb role switch for drd controllers.

Change-Id: I0b8b7fa99cc56d3fbc734ce85e36ce5133498eec
Signed-off-by: Sriram Dash <quic_sriramd@quicinc.com>
(cherry picked from commit 176de1f70b645458e5fbfdb4d107937cc966190e)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/sa8255p-ride.dts
+++ b/arch/arm64/boot/dts/qcom/sa8255p-ride.dts
@@ -471,7 +471,8 @@
 };
 
 &usb_0_dwc3 {
-	dr_mode = "peripheral";
+	dr_mode = "otg";
+	usb-role-switch;
 };
 
 &usb_0_hsphy {
@@ -498,7 +499,9 @@
 };
 
 &usb_1_dwc3 {
-	dr_mode = "host";
+	dr_mode = "otg";
+	usb-role-switch;
+	role-switch-default-mode = "host";
 };
 
 &usb_1_hsphy {
@@ -525,7 +528,9 @@
 };
 
 &usb_2_dwc3 {
-	dr_mode = "host";
+	dr_mode = "otg";
+	usb-role-switch;
+	role-switch-default-mode = "host";
 };
 
 &usb_2_hsphy {
