PENDING: arm64: dts: configs: Enable HD3SS322 USB Type-C DRP port controller driver on QCS9075 RB8
Enable HD3SS322 USB Type-C DRP port controller driver on QCS9075 RB8
as a module.

Change-Id: I387ec4262dd47ec050bbd5b8ea64f4d3190d5fed
Signed-off-by: Swati Agarwal <quic_swatagar@quicinc.com>
(cherry picked from commit 5fb9f76793f1af8d4ecbe8df0002f25d58ffeaf4)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/configs/qcom_defconfig
+++ b/arch/arm64/configs/qcom_defconfig
@@ -862,3 +862,4 @@ CONFIG_IXGBEVF=y
 CONFIG_AQUANTIA_PHY=y
 CONFIG_QCOM_TZMEM_MODE_SHMBRIDGE=y
 CONFIG_FW_DEVLINK_SYNC_STATE_TIMEOUT=y
+CONFIG_TYPEC_HD3SS3220=m
