--- a/arch/arm64/boot/dts/qcom/qcs615.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs615.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024, Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025, Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include <dt-bindings/clock/qcom,qcs615-gcc.h>
@@ -17,6 +17,22 @@
 	interrupt-parent = <&intc>;
 	#address-cells = <2>;
 	#size-cells = <2>;
+
+	audio-etm0 {
+		compatible = "qcom,coresight-remote-etm";
+		device-name = "audio_etm0";
+
+		qcom,inst-id = <5>;
+		atid = <40>;
+
+		out-ports {
+			port {
+				audio_out: endpoint {
+					remote-endpoint = <&dup_funnel_monaq_in1>;
+				};
+			};
+		};
+	};
 
 	cpus {
 		#address-cells = <2>;
@@ -1478,6 +1494,7 @@
 		tpda@6004000 {
 			compatible = "qcom,coresight-tpda", "arm,primecell";
 			reg = <0x0 0x06004000 0x0 0x1000>;
+			device-name = "tpda_qdss";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1584,9 +1601,30 @@
 			clock-names = "apb_pclk";
 
 			in-ports {
-				port {
+				#address-cells = <1>;
+				#size-cells = <0>;
+
+				port@0 {
+					reg = <0>;
+
 					funnel_qatb_in: endpoint {
 						remote-endpoint = <&tpda_qdss_out>;
+					};
+				};
+
+				port@5 {
+					reg = <5>;
+
+					funnel_qatb_in5: endpoint {
+						remote-endpoint = <&dup_funnel_monaq_out>;
+					};
+				};
+
+				port@7 {
+					reg = <7>;
+
+					funnel_qatb_in7: endpoint {
+						remote-endpoint = <&dup_funnel_turing_out>;
 					};
 				};
 			};
@@ -1603,6 +1641,7 @@
 		cti@6010000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06010000 0x0 0x1000>;
+			device-name = "cti_qdss";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1611,6 +1650,7 @@
 		cti@6011000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06011000 0x0 0x1000>;
+			device-name = "cti_qdss_1";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1619,6 +1659,7 @@
 		cti@6012000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06012000 0x0 0x1000>;
+			device-name = "cti_qdss_2";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1627,6 +1668,7 @@
 		cti@6013000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06013000 0x0 0x1000>;
+			device-name = "cti_qdss_3";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1635,6 +1677,7 @@
 		cti@6014000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06014000 0x0 0x1000>;
+			device-name = "cti_qdss_4";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1643,6 +1686,7 @@
 		cti@6015000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06015000 0x0 0x1000>;
+			device-name = "cti_qdss_5";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1651,6 +1695,7 @@
 		cti@6016000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06016000 0x0 0x1000>;
+			device-name = "cti_qdss_6";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1659,6 +1704,7 @@
 		cti@6017000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06017000 0x0 0x1000>;
+			device-name = "cti_qdss_7";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1667,6 +1713,7 @@
 		cti@6018000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06018000 0x0 0x1000>;
+			device-name = "cti_qdss_8";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1675,6 +1722,7 @@
 		cti@6019000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06019000 0x0 0x1000>;
+			device-name = "cti_qdss_9";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1683,6 +1731,7 @@
 		cti@601a000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x0601a000 0x0 0x1000>;
+			device-name = "cti_qdss_10";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1691,6 +1740,7 @@
 		cti@601b000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x0601b000 0x0 0x1000>;
+			device-name = "cti_qdss_11";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1699,6 +1749,7 @@
 		cti@601c000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x0601c000 0x0 0x1000>;
+			device-name = "cti_qdss_12";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1707,6 +1758,7 @@
 		cti@601d000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x0601d000 0x0 0x1000>;
+			device-name = "cti_qdss_13";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1715,6 +1767,7 @@
 		cti@601e000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x0601e000 0x0 0x1000>;
+			device-name = "cti_qdss_14";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1723,6 +1776,7 @@
 		cti@601f000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x0601f000 0x0 0x1000>;
+			device-name = "cti_qdss_15";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1866,6 +1920,14 @@
 				#address-cells = <1>;
 				#size-cells = <0>;
 
+				port@0 {
+					reg = <0>;
+
+					replicator0_out0: endpoint {
+						remote-endpoint = <&tmc_etr_in>;
+					};
+				};
+
 				port@1 {
 					reg = <1>;
 
@@ -1900,6 +1962,31 @@
 			};
 		};
 
+		tmc_etr: tmc@6048000 {
+			compatible = "arm,coresight-tmc", "arm,primecell";
+			reg = <0x0 0x06048000 0x0 0x1000>,
+			      <0x0 0x06064000 0x0 0x15000>;
+			reg-names = "tmc-base",
+				    "bam-base";
+
+			clocks = <&aoss_qmp>;
+			clock-names = "apb_pclk";
+
+			iommus = <&apps_smmu 0x00a0 0x0>,
+				 <&apps_smmu 0x01e0 0x0>;
+
+			arm,scatter-gather;
+			arm,buffer-size = <0x400000>;
+
+			in-ports {
+				port {
+					tmc_etr_in: endpoint {
+						remote-endpoint = <&replicator0_out0>;
+					};
+				};
+			};
+		};
+
 		replicator@604a000 {
 			compatible = "arm,coresight-dynamic-replicator", "arm,primecell";
 			reg = <0x0 0x0604a000 0x0 0x1000>;
@@ -1924,9 +2011,40 @@
 			};
 		};
 
+		funnel@6080000 {
+			compatible = "arm,coresight-dynamic-funnel", "arm,primecell";
+			reg = <0x0 0x06080000 0x0 0x10>,
+			      <0x0 0x06861000 0x0 0x1000>;
+			reg-names = "funnel-base-dummy",
+				    "funnel-base-real";
+
+			clocks = <&aoss_qmp>;
+			clock-names = "apb_pclk";
+
+			arm,primecell-periphid = <0x000bb908>;
+			qcom,duplicate-funnel;
+
+			in-ports {
+				port {
+					dup_funnel_turing_in: endpoint {
+						remote-endpoint = <&turing0_etm0_out>;
+					};
+				};
+			};
+
+			out-ports {
+				port {
+					dup_funnel_turing_out: endpoint {
+						remote-endpoint = <&funnel_qatb_in7>;
+					};
+				};
+			};
+		};
+
 		cti@683b000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x0683b000 0x0 0x1000>;
+			device-name = "cti_qdsp6";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1935,6 +2053,7 @@
 		tpdm@6840000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x06840000 0x0 0x1000>;
+			device-name = "tpdm_vsense";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1955,6 +2074,7 @@
 		tpdm@684c000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x0684c000 0x0 0x1000>;
+			device-name = "tpdm_prng";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1974,6 +2094,7 @@
 		tpdm@6850000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x06850000 0x0 0x1000>;
+			device-name = "tpdm_pimem";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -1995,6 +2116,7 @@
 		tpdm@6860000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x06860000 0x0 0x1000>;
+			device-name = "tpdm_turing";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2038,6 +2160,7 @@
 		cti@6867000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06867000 0x0 0x1000>;
+			device-name = "cti_turing";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2046,6 +2169,7 @@
 		tpdm@6870000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x06870000 0x0 0x1000>;
+			device-name = "tpdm_dcc";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2066,6 +2190,7 @@
 		tpdm@699c000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x0699c000 0x0 0x1000>;
+			device-name = "tpdm_wcss";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2088,6 +2213,7 @@
 		tpdm@69c0000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x069c0000 0x0 0x1000>;
+			device-name = "tpdm_monaq";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2099,6 +2225,41 @@
 				port {
 					tpdm_monaq_out: endpoint {
 						remote-endpoint = <&funnel_monaq_in>;
+					};
+				};
+			};
+		};
+
+		funnel@69c1000 {
+			compatible = "arm,coresight-dynamic-funnel", "arm,primecell";
+			reg = <0x0 0x069c1000 0x0 0x1>,
+			      <0x0 0x069c3000 0x0 0x1000>;
+			reg-names = "funnel-base-dummy",
+				    "funnel-base-real";
+
+			clocks = <&aoss_qmp>;
+			clock-names = "apb_pclk";
+
+			arm,primecell-periphid = <0x000bb908>;
+			qcom,duplicate-funnel;
+
+			in-ports {
+				#address-cells = <1>;
+				#size-cells = <0>;
+
+				port@1 {
+					reg = <1>;
+
+					dup_funnel_monaq_in1: endpoint {
+						remote-endpoint = <&audio_out>;
+					};
+				};
+			};
+
+			out-ports {
+				port {
+					dup_funnel_monaq_out: endpoint {
+						remote-endpoint = <&funnel_qatb_in5>;
 					};
 				};
 			};
@@ -2131,6 +2292,7 @@
 		tpdm@69d0000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x069d0000 0x0 0x1000>;
+			device-name = "tpdm_qm";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2151,6 +2313,7 @@
 		tpdm@6a00000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x06a00000 0x0 0x1000>;
+			device-name = "tpdm_ddr";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2171,6 +2334,7 @@
 		cti@6a02000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06a02000 0x0 0x1000>;
+			device-name = "cti_ddr_dl0";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2179,6 +2343,7 @@
 		cti@6a03000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06a03000 0x0 0x1000>;
+			device-name = "cti_ddr_dl0_1";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2187,6 +2352,7 @@
 		cti@6a10000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06a10000 0x0 0x1000>;
+			device-name = "cti_ddr_dl1";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2195,6 +2361,7 @@
 		cti@6a11000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06a11000 0x0 0x1000>;
+			device-name = "cti_ddr_dl1_1";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2227,6 +2394,7 @@
 		tpda@6b01000 {
 			compatible = "qcom,coresight-tpda", "arm,primecell";
 			reg = <0x0 0x06b01000 0x0 0x1000>;
+			device-name = "tpda_swao";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2265,6 +2433,7 @@
 		tpdm@6b02000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x06b02000 0x0 0x1000>;
+			device-name = "tpdm_swao_0";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2285,6 +2454,7 @@
 		tpdm@6b03000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x06b03000 0x0 0x1000>;
+			device-name = "tpdm_swao_1";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2305,6 +2475,7 @@
 		cti@6b04000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06b04000 0x0 0x1000>;
+			device-name = "cti_swao";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2313,6 +2484,7 @@
 		cti@6b05000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06b05000 0x0 0x1000>;
+			device-name = "cti_swao_1";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2321,6 +2493,7 @@
 		cti@6b06000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06b06000 0x0 0x1000>;
+			device-name = "cti_swao_2";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2329,6 +2502,7 @@
 		cti@6b07000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06b07000 0x0 0x1000>;
+			device-name = "cti_swao_3";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2435,6 +2609,7 @@
 		cti@6b21000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06b21000 0x0 0x1000>;
+			device-name = "cti_aop_m3";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2443,6 +2618,7 @@
 		tpdm@6b48000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x06b48000 0x0 0x1000>;
+			device-name = "tpdm_west";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2462,6 +2638,7 @@
 		cti@6c13000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06c13000 0x0 0x1000>;
+			device-name = "cti_titan";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2470,6 +2647,7 @@
 		cti@6c20000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06c20000 0x0 0x1000>;
+			device-name = "cti_venus";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2479,6 +2657,7 @@
 		tpdm@6c28000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x06c28000 0x0 0x1000>;
+			device-name = "tpdm_center";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2498,6 +2677,7 @@
 		cti@6c29000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06c29000 0x0 0x1000>;
+			device-name = "cti_dlct";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2506,6 +2686,7 @@
 		cti@6c2a000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x06c2a000 0x0 0x1000>;
+			device-name = "cti_dlct_1";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2514,6 +2695,7 @@
 		cti@7020000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x07020000 0x0 0x1000>;
+			device-name = "cti_apss_apb_2";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2542,6 +2724,7 @@
 		cti@7120000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x07120000 0x0 0x1000>;
+			device-name = "cti_apss_apb_3";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2570,6 +2753,7 @@
 		cti@7220000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x07220000 0x0 0x1000>;
+			device-name = "cti_apss_apb_4";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2598,6 +2782,7 @@
 		cti@7320000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x07320000 0x0 0x1000>;
+			device-name = "cti_apss_apb_5";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2626,6 +2811,7 @@
 		cti@7420000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x07420000 0x0 0x1000>;
+			device-name = "cti_apss_apb_6";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2654,6 +2840,7 @@
 		cti@7520000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x07520000 0x0 0x1000>;
+			device-name = "cti_apss_apb_7";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2682,6 +2869,7 @@
 		cti@7620000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x07620000 0x0 0x1000>;
+			device-name = "cti_apss_apb_8";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2710,6 +2898,7 @@
 		cti@7720000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x07720000 0x0 0x1000>;
+			device-name = "cti_apss_apb_9";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2884,6 +3073,7 @@
 		tpdm@7830000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x07830000 0x0 0x1000>;
+			device-name = "tpdm_olc";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2903,6 +3093,7 @@
 		tpda@7832000 {
 			compatible = "qcom,coresight-tpda", "arm,primecell";
 			reg = <0x0 0x07832000 0x0 0x1000>;
+			device-name = "tpda_olc";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2927,6 +3118,7 @@
 		tpdm@7860000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x07860000 0x0 0x1000>;
+			device-name = "tpdm_apss";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2946,6 +3138,7 @@
 		tpda@7862000 {
 			compatible = "qcom,coresight-tpda", "arm,primecell";
 			reg = <0x0 0x07862000 0x0 0x1000>;
+			device-name = "tpda_apss";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2970,6 +3163,7 @@
 		tpdm@78a0000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x078a0000 0x0 0x1000>;
+			device-name = "tpdm_llm_silver";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -2989,6 +3183,7 @@
 		tpdm@78b0000 {
 			compatible = "qcom,coresight-tpdm", "arm,primecell";
 			reg = <0x0 0x078b0000 0x0 0x1000>;
+			device-name = "tpdm_llm_gold";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -3008,6 +3203,7 @@
 		tpda@78c0000 {
 			compatible = "qcom,coresight-tpda", "arm,primecell";
 			reg = <0x0 0x078c0000 0x0 0x1000>;
+			device-name = "tpda_llm_silver";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -3032,6 +3228,7 @@
 		tpda@78d0000 {
 			compatible = "qcom,coresight-tpda", "arm,primecell";
 			reg = <0x0 0x078d0000 0x0 0x1000>;
+			device-name = "tpda_llm_gold";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -3056,6 +3253,7 @@
 		cti@78e0000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x078e0000 0x0 0x1000>;
+			device-name = "cti_apss";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -3064,6 +3262,7 @@
 		cti@78f0000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x078f0000 0x0 0x1000>;
+			device-name = "cti_apss_1";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -3072,6 +3271,7 @@
 		cti@7900000 {
 			compatible = "arm,coresight-cti", "arm,primecell";
 			reg = <0x0 0x07900000 0x0 0x1000>;
+			device-name = "cti_apss_2";
 
 			clocks = <&aoss_qmp>;
 			clock-names = "apb_pclk";
@@ -3694,6 +3894,23 @@
 				snps,hird-threshold = /bits/ 8 <0x10>;
 
 				maximum-speed = "high-speed";
+			};
+		};
+	};
+
+	turing0-etm0 {
+		compatible = "qcom,coresight-remote-etm";
+		device-name = "turing0_etm0";
+
+		qcom,atid-num = <2>;
+		qcom,inst-id = <13>;
+		atid = <38 39>;
+
+		out-ports {
+			port {
+				turing0_etm0_out: endpoint {
+					remote-endpoint = <&dup_funnel_turing_in>;
+				};
 			};
 		};
 	};
