FROMLIST: clk: qcom: gpucc-qcs615: Add QCS615 graphics clock controller driver
Add support for the graphics clock controller for graphics clients to
be able to request for the clocks on QCS615 platform.

Reviewed-by: Dmitry Baryshkov <dmitry.baryshkov@linaro.org>
Link: https://lore.kernel.org/linux-arm-msm/20250119-qcs615-mm-v4-clockcontroller-v4-5-5d1bdb5a140c@quicinc.com/
Signed-off-by: Taniya Das <quic_tdas@quicinc.com>
Patch-mainline: linux-arm-kernel @ 19/01/25, 15:52
Signed-off-by: Dongfang Zhao <quic_doz@quicinc.com>
(cherry picked from commit c5b943b4dca23d9c9d728daeacee13a3da1e44ce)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/drivers/clk/qcom/Kconfig
+++ b/drivers/clk/qcom/Kconfig
@@ -473,6 +473,15 @@ config SA_CAMCC_8775P
 	  Say Y if you want to support camera devices and functionality such as
 	  capturing pictures.
 
+config QCS_GPUCC_615
+	tristate "QCS615 Graphics clock controller"
+	depends on ARM64 || COMPILE_TEST
+	select QCS_GCC_615
+	help
+	  Support for the graphics clock controller on QCS615 devices.
+	  Say Y if you want to support graphics controller devices and
+	  functionality such as 3D graphics.
+
 config QCS_GCC_8300
 	tristate "QCS8300 Global Clock Controller"
 	depends on ARM64 || COMPILE_TEST
