FROMLIST: clk: qcom: videocc-qcs615: Add QCS615 video clock controller driver
Add support for the video clock controller for video clients to
be able to request for the clocks on QCS615 platform.

Reviewed-by: Bryan O'Donoghue <bryan.odonoghue@linaro.org>
Reviewed-by: Dmitry Baryshkov <dmitry.baryshkov@linaro.org>
Link: https://lore.kernel.org/linux-arm-msm/20250119-qcs615-mm-v4-clockcontroller-v4-9-5d1bdb5a140c@quicinc.com/
Signed-off-by: Taniya Das <quic_tdas@quicinc.com>
Patch-mainline: linux-arm-kernel @ 19/01/25, 15:52
Signed-off-by: Dongfang Zhao <quic_doz@quicinc.com>
(cherry picked from commit fb2b60bcf2c4b1185d0a57d59ba24b2e4a2c6163)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/drivers/clk/qcom/Kconfig
+++ b/drivers/clk/qcom/Kconfig
@@ -482,6 +482,15 @@ config QCS_GPUCC_615
 	  Say Y if you want to support graphics controller devices and
 	  functionality such as 3D graphics.
 
+config QCS_VIDEOCC_615
+	tristate "QCS615 Video Clock Controller"
+	depends on ARM64 || COMPILE_TEST
+	select QCS_GCC_615
+	help
+	  Support for the video clock controller on QCS615 devices.
+	  Say Y if you want to support video devices and functionality such as
+	  video encode and decode.
+
 config QCS_GCC_8300
 	tristate "QCS8300 Global Clock Controller"
 	depends on ARM64 || COMPILE_TEST
