--- a/arch/arm64/boot/dts/qcom/qcs8300.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs8300.dtsi
@@ -3492,7 +3492,12 @@
 					<0x0 0xaf54200 0x0 0x0c0>,
 					<0x0 0xaf55000 0x0 0x770>,
 					<0x0 0xaf56000 0x0 0x09c>,
-					<0x0 0xaf57000 0x0 0x09c>;
+					<0x0 0xaf57000 0x0 0x09c>,
+					<0x0 0xaf58000 0x0 0x09c>,
+					<0x0 0xaf59000 0x0 0x09c>,
+					<0x0 0xaf5a000 0x0 0x23c>,
+					<0x0 0xaf5b000 0x0 0x23c>;
+
 
 				interrupt-parent = <&mdss>;
 				interrupts = <12>;
@@ -3502,17 +3507,28 @@
 					 <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_LINK_CLK>,
 					 <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_LINK_INTF_CLK>,
 					 <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_PIXEL0_CLK>,
-					 <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_PIXEL1_CLK>;
+					 <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_PIXEL1_CLK>,
+					 <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_PIXEL2_CLK>,
+					 <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_PIXEL3_CLK>;
+
 				clock-names = "core_iface",
 						"core_aux",
 						"ctrl_link",
 						"ctrl_link_iface",
 						"stream_pixel",
-						"stream_1_pixel";
+						"stream_1_pixel",
+						"stream_2_pixel",
+						"stream_3_pixel";
+
 				assigned-clocks = <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_LINK_CLK_SRC>,
 						  <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_PIXEL0_CLK_SRC>,
-						  <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_PIXEL1_CLK_SRC>;
+						  <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_PIXEL1_CLK_SRC>,
+						  <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_PIXEL2_CLK_SRC>,
+						  <&dispcc0 MDSS_DISP_CC_MDSS_DPTX0_PIXEL3_CLK_SRC>;
+
 				assigned-clock-parents = <&mdss_edp_phy 0>,
+							 <&mdss_edp_phy 1>,
+							 <&mdss_edp_phy 1>,
 							 <&mdss_edp_phy 1>,
 							 <&mdss_edp_phy 1>;
 				phys = <&mdss_edp_phy>;
