QCLINUX: arm64: dts: qcom: Add mem-object node for si_core
Add DT node to enable mem-object for si_core in QCLINUX.

Change-Id: I8f074a976233082a6ce3f2b746a7a608af29d29d
Signed-off-by: Ujjawal Sankhwar <quic_usankhwa@quicinc.com>
(cherry picked from commit a5b35790066430db8b4e8fc682b0ccad108f56aa)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcm6490-addons.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-addons.dtsi
@@ -2,7 +2,7 @@
 /*
  * qcm6490-addons device tree source
  *
- * Copyright (c) 2023-2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2023-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  *
  */
 
@@ -42,12 +42,16 @@
 
 	/* Add overlay for firmware node containing qcom_scm in sc7280.dtsi */
 	firmware {
-		qtee_shmbridge {
-			compatible = "qcom,tee-shared-memory-bridge";
+		qcom_mem_object {
+			compatible = "qcom,mem-object";
 		};
 
 		qcom_smcinvoke {
 			compatible = "qcom,smcinvoke";
+		};
+
+		qtee_shmbridge {
+			compatible = "qcom,tee-shared-memory-bridge";
 		};
 	};
 
