--- a/arch/arm64/boot/dts/qcom/qcs8300-addons.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs8300-addons.dtsi
@@ -1,17 +1,21 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include "qcs8300-dma-heaps.dtsi"
 / {
 	firmware {
-		qtee_shmbridge {
-			compatible = "qcom,tee-shared-memory-bridge";
+		qcom_mem_object {
+			compatible = "qcom,mem-object";
 		};
 
 		qcom_smcinvoke {
 			compatible = "qcom,smcinvoke";
+		};
+
+		qtee_shmbridge {
+			compatible = "qcom,tee-shared-memory-bridge";
 		};
 	};
 
