--- a/arch/arm64/boot/dts/qcom/qcs8550-addons.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs8550-addons.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 /{
@@ -24,12 +24,16 @@
 
 	/* Add overlay for firmware node containing qcom_scm in sm8550.dtsi */
 	firmware {
-		qtee_shmbridge {
-			compatible = "qcom,tee-shared-memory-bridge";
+		qcom_mem_object {
+			compatible = "qcom,mem-object";
 		};
 
 		qcom_smcinvoke {
 			compatible = "qcom,smcinvoke";
+		};
+
+		qtee_shmbridge {
+			compatible = "qcom,tee-shared-memory-bridge";
 		};
 	};
 };
