--- a/arch/arm64/boot/dts/qcom/sa8775p-addons.dtsi
+++ b/arch/arm64/boot/dts/qcom/sa8775p-addons.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include "sa8775p-dma-heaps.dtsi"
@@ -41,12 +41,16 @@
 	};
 
 	firmware {
-		qtee_shmbridge {
-			compatible = "qcom,tee-shared-memory-bridge";
+		qcom_mem_object {
+			compatible = "qcom,mem-object";
 		};
 
 		qcom_smcinvoke {
 			compatible = "qcom,smcinvoke";
+		};
+
+		qtee_shmbridge {
+			compatible = "qcom,tee-shared-memory-bridge";
 		};
 	};
 
