--- a/arch/arm64/configs/qcom_gen4auto.config
+++ b/arch/arm64/configs/qcom_gen4auto.config
@@ -52,6 +52,10 @@ CONFIG_QCOM_QMI_COOLING=m
 CONFIG_QCOM_QPS615_PCIE_SWITCH=y
 CONFIG_QCOM_SCM_ADDON=y
 CONFIG_QCOM_SECURE_BUFFER=y
+CONFIG_QCOM_SI_CORE=m
+CONFIG_QCOM_SI_CORE_MEM_OBJECT=m
+CONFIG_QCOM_SI_CORE_WQ=y
+CONFIG_QCOM_SI_CORE_XTS=m
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 # CONFIG_QCOM_SOC_DEBUG is not set
 CONFIG_QCOM_SPMI_ADC5_GEN3=m
