--- a/sound/soc/qcom/Kconfig
+++ b/sound/soc/qcom/Kconfig
@@ -163,6 +163,20 @@ config SND_SOC_MSM8996
 	  APQ8096 SoC-based systems.
 	  Say Y if you want to use audio device on this SoCs
 
+config SND_SOC_QCS9100
+        tristate "SoC Machine driver for QCS9100 boards"
+        depends on QCOM_APR
+        select SND_SOC_MAX98357A
+        select SND_SOC_QCOM_COMMON
+        select SND_SOC_QDSP6
+        select SND_SOC_QCOM_COMMON
+        select SND_SOC_QCOM_SDW
+        help
+          Add support for audio on Qualcomm Technologies Inc.
+          QCS9100 SoC-based systems.
+          To compile this driver say Y or M if you want to
+          use audio device on this SoCs.
+
 config SND_SOC_SDM845
 	tristate "SoC Machine driver for SDM845 boards"
 	depends on QCOM_APR && I2C && SOUNDWIRE
