QCLINUX: arm64: defconfigs: Disable TBU support
Disable TBU support for gen4auto. This defconfig is only enabling
a context fault handler for adreno smmu. This context fault handler
is trying to get the physical address from the faulting iova from the
pgd pointed to by the pgtable ops. But GPU, with the per process
pagetable support, can change the pagetable ops depending upon the
GPU processes, so there could be edge cases where the faulting iova
will not be present in the pgd pointed to be the pgtable ops, if the
GPU have switched the pagetable ops and pagetable.

So disable this defconfig and use the default context fault handler
provided by the upstream kernel.

Change-Id: Ie669f79eabf982572ab6476305b846ec0d1485fe
Signed-off-by: Kaisheng Yang <quic_kaisheng@quicinc.com>
Signed-off-by: Aravind Vijayakumar <quic_aprasann@quicinc.com>
(cherry picked from commit 24385e49c6759ac9065aea0f63e2250c9e44581b)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/configs/qcom_gen4auto.config
+++ b/arch/arm64/configs/qcom_gen4auto.config
@@ -1,6 +1,7 @@
 
 # CONFIG_ARM_CORESIGHT_PMU_ARCH_SYSTEM_PMU is not set
 # CONFIG_ARM_SCMI_CPUFREQ is not set
+# CONFIG_ARM_SMMU_QCOM_TBU is not set
 # CONFIG_ATH11K is not set
 CONFIG_BACKLIGHT_QCOM_WLED=y
 CONFIG_BLK_DEV_DM=y
