--- a/arch/arm64/configs/qcom_gen5auto.config
+++ b/arch/arm64/configs/qcom_gen5auto.config
@@ -5,3 +5,4 @@ CONFIG_QCOM_CPUCP_MBOX=y
 CONFIG_MHI_BUS=y
 # CONFIG_MHI_BUS_DEBUG is not set
 CONFIG_MHI_BUS_PCI_GENERIC=y
+# CONFIG_ARM_SMMU_QCOM_TBU is not set
