QCLINUX: arm64: defconfig: Align Gen5auto configs with Gen4auto
Align with Gen4auto kernel config 'commit cf78f68669b3
("QCLINUX: arm64: defconfig: enable carveout heaps")' for gen5auto
target.
Add QRTR configs for WLAN.

Change-Id: I7519af1468104ce3ce9bd16654ed618c9eb9bacd
Signed-off-by: Kaisheng Yang <quic_kaisheng@quicinc.com>
(cherry picked from commit c362271fee483668ad350dc187f26847267d3eef)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/configs/qcom_gen5auto.config
+++ b/arch/arm64/configs/qcom_gen5auto.config
@@ -1,9 +1,66 @@
-CONFIG_PINCTRL_SA8797P=y
-CONFIG_PTP_QCOM_CLOCK_TSC=y
-CONFIG_SCSI_UFS_QCOM=y
+# CONFIG_ARM_CORESIGHT_PMU_ARCH_SYSTEM_PMU is not set
 CONFIG_ARM_SCMI_CPUFREQ=y
-CONFIG_QCOM_CPUCP_MBOX=y
+# CONFIG_ARM_SMMU_QCOM_TBU is not set
+# CONFIG_ATH11K is not set
+CONFIG_BLK_DEV_DM=y
+# CONFIG_CORESIGHT is not set
+CONFIG_DM_INIT=y
+CONFIG_DM_VERITY=y
+CONFIG_DW_EDMA=y
+CONFIG_DW_EDMA_PCIE=y
+CONFIG_IOMMU_DEFAULT_DMA_LAZY=y
 CONFIG_MHI_BUS=y
 # CONFIG_MHI_BUS_DEBUG is not set
+CONFIG_MHI_BUS_EP=y
 CONFIG_MHI_BUS_PCI_GENERIC=y
-# CONFIG_ARM_SMMU_QCOM_TBU is not set
+CONFIG_MHI_EP_NET=y
+CONFIG_MHI_NET=y
+# CONFIG_MHI_WWAN_CTRL is not set
+# CONFIG_MHI_WWAN_MBIM is not set
+# CONFIG_MODULE_SIG_FORCE is not set
+CONFIG_MSM_RDBG=m
+CONFIG_NET_KEY=m
+CONFIG_NO_HZ_FULL=y
+CONFIG_PANIC_TIMEOUT=0
+CONFIG_PHY_QCOM_QMP=m
+CONFIG_PHY_QCOM_QMP_COMBO=m
+CONFIG_PHY_QCOM_QMP_PCIE=m
+CONFIG_PHY_QCOM_QMP_UFS=m
+CONFIG_PHY_QCOM_SNPS_EUSB2=m
+CONFIG_PINCTRL_SA8797P=y
+CONFIG_QCOM_DCC=m
+CONFIG_QCOM_DMABUF_HEAPS=y
+CONFIG_QCOM_DMABUF_HEAPS_CARVEOUT=y
+CONFIG_QCOM_DMABUF_HEAPS_CMA=y
+CONFIG_QCOM_DMABUF_HEAPS_SYSTEM=y
+CONFIG_QCOM_DMABUF_HEAPS_SYSTEM_SECURE=y
+CONFIG_QCOM_MEM_BUF=y
+CONFIG_QCOM_MEM_BUF_DEV=y
+# CONFIG_QCOM_PANEL_EVENT_NOTIFIER is not set
+CONFIG_PCI_EPF_MHI=y
+CONFIG_PCIE_QCOM_EP=m
+CONFIG_QCOM_CPUCP_MBOX=y
+CONFIG_QCOM_MEMORY_DUMP_V2=y
+CONFIG_QCOM_SCM_ADDON=y
+CONFIG_QCOM_SECURE_BUFFER=y
+CONFIG_QCOM_SMCINVOKE=m
+CONFIG_QCOM_SMP2P_SLEEPSTATE=y
+# CONFIG_QCOM_SOC_DEBUG is not set
+CONFIG_QCOM_WDT_CORE=y
+CONFIG_QRTR=y
+CONFIG_QRTR_SMD=y
+CONFIG_QRTR_MHI=m
+CONFIG_QTEE_SHM_BRIDGE=y
+CONFIG_QTI_BCL_PMIC5=y
+CONFIG_QTI_DEVFREQ_CDEV=m
+CONFIG_QTI_TZ_LOG=m
+CONFIG_REGULATOR_DEBUG_CONTROL=y
+CONFIG_REGULATOR_PROXY_CONSUMER=y
+CONFIG_SCSI_UFS_QCOM=y
+CONFIG_SERIAL_QCOM_GENI_CONSOLE=y
+CONFIG_SND_SOC_MSM_STUB=y
+CONFIG_USB_DWC3_QCOM=m
+# CONFIG_USB_F_QDSS is not set
+CONFIG_VIRT_DRIVERS=y
+CONFIG_XFRM=y
+CONFIG_XFRM_USER=y
