QCLINUX: arm64: defconfig: enable Novatek NT36672E and Lontium lt9611UXC configs
Enable Novatek NT36672E and Lontium lt9611UXC configs for Qualcomm
qcm6490 idp and rb3gen board respectively to enable DSI display ports.

Change-Id: I1fd9057a80ab412e2b5680d97d784ab0ed55ed62
Signed-off-by: Ayushi Makhija <quic_amakhija@quicinc.com>
(cherry picked from commit 5f858a9699a7af24cc7fd246ca15b6ee1f19f667)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/configs/qcom_defconfig
+++ b/arch/arm64/configs/qcom_defconfig
@@ -414,6 +414,7 @@ CONFIG_VIDEO_QCOM_CAMSS=m
 CONFIG_VIDEO_QCOM_VENUS=m
 CONFIG_VIDEO_QCOM_IRIS=m
 CONFIG_DRM=m
+CONFIG_DRM_LONTIUM_LT9611UXC=m
 CONFIG_DRM_ANALOGIX_ANX7625=m
 CONFIG_DRM_LONTIUM_LT9611UXC=m
 # CONFIG_DRM_FBDEV_EMULATION is not set
@@ -425,6 +426,7 @@ CONFIG_DRM_MSM=m
 CONFIG_DRM_PANEL_LVDS=m
 CONFIG_DRM_PANEL_SIMPLE=m
 CONFIG_DRM_PANEL_EDP=m
+CONFIG_DRM_PANEL_NOVATEK_NT36672E=m
 CONFIG_DRM_DISPLAY_CONNECTOR=m
 CONFIG_FB=y
 CONFIG_FB_EFI=y
