PENDING: firmware: qcom: Add si_core and si_core_xts
Add si_core and si_core_xts driver which support communication between
Trusted and Rich Execution Environment.

Change-Id: I735e2aabc62bbe6435e20be7b8b5a5c17b5a22be
Signed-off-by: Ujjawal Sankhwar <quic_usankhwa@quicinc.com>
(cherry picked from commit 8cccd6d05bb736b5e5dce177c6e1eb45a46f486f)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/drivers/firmware/qcom/Kconfig
+++ b/drivers/firmware/qcom/Kconfig
@@ -99,4 +99,6 @@ config QTI_TZ_LOG
 	  by the Secure code (Trust zone). These messages provide diagnostic information
 	  about TZ operations.
 
+source "drivers/firmware/qcom/si_core/Kconfig"
+
 endmenu
