--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -136,6 +136,10 @@ dtb-$(CONFIG_ARCH_QCOM)	+= qcs9075-ride-r3.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs9100-addons-ride.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs9100-addons-ride-r3.dtb
 
+qcs9100-addons-ride-el2-dtbs:= qcs9100-addons-ride.dtb sa8775p-el2.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM) += qcs9100-addons-ride-el2.dtb
+
 qcs9100-addons-ride-r3-el2-dtbs:= qcs9100-addons-ride-r3.dtb sa8775p-el2.dtbo
 
 dtb-$(CONFIG_ARCH_QCOM) += qcs9100-addons-ride-r3-el2.dtb
@@ -154,6 +158,10 @@ dtb-$(CONFIG_ARCH_QCOM)	+= sa8295p-adp.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= sa8540p-ride.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= sa8775p-addons-ride.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= sa8775p-addons-ride-r3.dtb
+
+sa8775p-addons-ride-el2-dtbs:= sa8775p-addons-ride.dtb sa8775p-el2.dtbo
+
+dtb-$(CONFIG_ARCH_QCOM) += sa8775p-addons-ride-el2.dtb
 
 sa8775p-addons-ride-r3-el2-dtbs:= sa8775p-addons-ride-r3.dtb sa8775p-el2.dtbo
 
