--- a/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
@@ -1046,7 +1046,7 @@
 };
 
 &uart17 {
-	pinctrl-0 = <&qup_uart17_default>;
+	pinctrl-0 = <&qup_uart17_default>, <&bt_bootstrap_default>;
 	pinctrl-names = "default";
 	qcom,load-firmware;
 	qcom,xfer-mode = <1>;
@@ -1056,7 +1056,7 @@
 	bluetooth: bluetooth {
 		compatible = "qcom,wcn6855-bt";
 		pinctrl-names = "default";
-		pinctrl-0 = <&bt_en_state>, <&bt_bootstrap_default>;
+		pinctrl-0 = <&bt_en_state>;
 		enable-gpios = <&pmm8654au_1_gpios 8 GPIO_ACTIVE_HIGH>; /* BT_EN */
 		max-speed = <3200000>;
 	};
