UPSTREAM: BACKPORT: arm64: dts: qcom: qcs6490-rb3gen2: Enable USB Type-C display
With the ADSP remoteproc loaded pmic_glink can be introduced and
together with the redriver wired up to provide role and orientation
switching signals as well as USB Type-C display on RB3gen2.

Change-Id: I158864a025eb08747765d4a4b4a8a94cd36beb36
Signed-off-by: Bjorn Andersson <quic_bjorande@quicinc.com>
Reviewed-by: Neil Armstrong <neil.armstrong@linaro.org>
Tested-by: Krishna Kurapati PSSNV <quic_kriskura@quicinc.com>
Link: https://lore.kernel.org/linux-arm-msm/20240326-rb3gen2-dp-connector-v2-5-a9f1bc32ecaf@quicinc.com
Git-Commit: c3d9acc529d581e3391dac3578812a7402e21c8a
Git-repo: https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git
Signed-off-by: Amit Singh <quic_amitsi@quicinc.com>
(cherry picked from commit f3163ef29f3ad43404a4535c6342359fb9f24d30)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs6490-rb3gen2.dts
+++ b/arch/arm64/boot/dts/qcom/qcs6490-rb3gen2.dts
@@ -773,6 +773,15 @@
 	status = "okay";
 };
 
+&mdss_dp {
+	status = "okay";
+};
+
+&mdss_dp_out {
+	data-lanes = <0 1>;
+	remote-endpoint = <&usb_1_qmpphy_dp_in>;
+};
+
 &mdss_dsi {
 	vdda-supply = <&vreg_l6b_1p2>;
 	status = "okay";
@@ -1142,6 +1151,10 @@
 
 &usb_1_qmpphy_out {
 	remote-endpoint = <&redriver_ss_in>;
+};
+
+&usb_1_qmpphy_dp_in {
+	remote-endpoint = <&mdss_dp_out>;
 };
 
 &vreg_l7b_2p952 {
