--- a/arch/arm64/configs/qcom_debug.config
+++ b/arch/arm64/configs/qcom_debug.config
@@ -31,4 +31,6 @@ CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_DEFAULT_KMSG_BYTES=10240
 CONFIG_PSTORE_PMSG=y
 CONFIG_REED_SOLOMON=y
+CONFIG_PSTORE_RAM=y
+CONFIG_QCOM_MINIDUMP=y
 CONFIG_SOFTLOCKUP_DETECTOR=y
