UPSTREAM: arm64: dts: qcom: Fix max speed for usb_1 on qcs8300
Fix max speed for usb_1 on qcs8300. This was incorrectly written
as super-speed while on upstream it is left to hw to decide and
hence super-speed-plus works fine on upstream.

Change-Id: I048bfe370dc218945cb4302c0d04dce38d340494
Signed-off-by: Krishna Kurapati <krishna.kurapati@oss.qualcomm.com>
(cherry picked from commit 00f0ff90b296242c7518243398371d1878c3f50c)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs8300.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs8300.dtsi
@@ -7797,7 +7797,7 @@
 			snps,dis_enblslpm_quirk;
 			phys = <&usb_1_hsphy>, <&usb_qmpphy>;
 			phy-names = "usb2-phy", "usb3-phy";
-			maximum-speed = "super-speed";
+			maximum-speed = "super-speed-plus";
 			role-switch;
 
 			port {
