PENDING: arm64: dts: qcom: Rename qcs9075-rb8 to qcs9075-iq-9075-evk
Rename qcs9075-rb8.dts to qcs9075-iq-9075-evk.dts to align with
product name.

Change-Id: I9dcec73d02a27aedf6646da223a02bd59230632d
Signed-off-by: Wasim Nazir <quic_wasimn@quicinc.com>
(cherry picked from commit 16c3abb20109fab3fe5e377b2d3a0e96b8c4aa98)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
@@ -13,8 +13,8 @@
 #include "qcs9xxx-reserved-memory.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. QCS9075 RB8";
-	compatible = "qcom,qcs9075-rb8", "qcom,qcs9075", "qcom,sa8775p";
+	model = "Qualcomm Technologies, Inc. IQ 9075 EVK";
+	compatible = "qcom,qcs9075-iq-9075-evk", "qcom,qcs9075", "qcom,sa8775p";
 	qcom,msm-id = <676 0x20000>;
 	qcom,board-id = <0x10020 0>, <0x10019 0>;
 
