QCLINUX: arm64: dts: qcom: qcs9075-addons: Rename rb8 to iq-9075-evk
Rename qcs9075-addons-rb8.dts to qcs9075-addons-iq-9075-evk.dts
to align with product name.

Change-Id: I41f331da2029632b63f5ab5213c1d116381802dc
Signed-off-by: Wasim Nazir <quic_wasimn@quicinc.com>
(cherry picked from commit afa3bf0affa5e24fdf13f34f12416817abf36a06)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -127,7 +127,7 @@ dtb-$(CONFIG_ARCH_QCOM)	+= qcs8300-ride.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs8550-addons-aim300-aiot.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs8550-aim300-aiot.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs8550-rb5gen2-hdk.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= qcs9075-addons-rb8.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= qcs9075-addons-iq-9075-evk.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs9075-addons-ride.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs9075-addons-ride-r3.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs9075-iq-9075-evk.dtb
