--- a/arch/arm64/boot/dts/qcom/qcs9075-addons-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-addons-iq-9075-evk.dts
@@ -4,12 +4,12 @@
  */
 /dts-v1/;
 
-#include "qcs9075-rb8.dts"
+#include "qcs9075-iq-9075-evk.dts"
 #include "sa8775p-addons.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. QCS9075 Addons RB8";
-	compatible = "qcom,qcs9075-addons-rb8", "qcom,qcs9075", "qcom,sa8775p";
+	model = "Qualcomm Technologies, Inc. Addons IQ 9075 EVK";
+	compatible = "qcom,qcs9075-addons-iq-9075-evk", "qcom,qcs9075", "qcom,sa8775p";
 
 	sound {
 		compatible = "qcom,qcs9075-rb8-sndcard";
