QCLINUX: arm64: dts: qcom: Fix issue of USB hub & DP not working properly
Lane number represents the following.
- 0 is RX2 lane
- 1 is TX2 lane
- 2 is TX1 lane
- 3 is RX1 lane
In the order A, B, C & D.oneOf:
- items:
- const: 0
- const: 1
- const: 2
- const: 3
The position determines the physical port of the redriver.

Change-Id: Iedd86dca08caaf7628fbe88350cecb59c32af812
Signed-off-by: zhanyi <quic_zhanyi@quicinc.com>
(cherry picked from commit fd4639216482c7d8c65703663c51b499d9af534e)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs6490-addons-rb3gen2-ia-mezz.dts
+++ b/arch/arm64/boot/dts/qcom/qcs6490-addons-rb3gen2-ia-mezz.dts
@@ -372,6 +372,11 @@
 	status = "okay";
 };
 
+&redriver_ss_in {
+	data-lanes = <0 1 2 3>;
+	remote-endpoint = <&usb_1_qmpphy_out>;
+};
+
 &sound {
 	compatible = "qcom,qcs6490-rb3gen2-ia-sndcard";
 	model = "qcm6490-rb3-ia-snd-card";
