PENDING: arm64: dts: qcom: Add support for QCS8275 IQ8 EVK board
IQ8 EVK board is based on the QCS8275 SoC.

QCS8275 is another SoC under IQ8 series of SoCs. Unlike QCS8300
which has safety features, QCS8275 doesn't have the feature.
It is designed for compute-heavy and AI-based solutions.

IQ8 EVK board is a single board computer (SBC) that supports various
industrial applications, including factory automation, industrial
robots, drones, edge AI boxes, machine vision, autonomous mobile
robots (AMRs), and industrial gateways.

Board Details:

SOC:
	SoC qcs8275 with Octa-core (2.35 GHz)(2x Gold+,2x Gold,4x Silver)
	Memory: 2x 8GB LPDDR5
	Storage: 1x 128GB UFS, micro SD card, EEPROMs for MACs
	Debug: JTAG, FTDI
	2x USB 3.1 Gen2, 1x USB 2.0

Display:
	2x mini-DP

Audio/Camera/Video:
	1x I2S mic
	2x I2S speaker amps
	additional I2S on GPIOs
	3x Quad deserializers
	3x CSI (C-PHY or D-PHY) cameras

Connectivity:
	m.2 module (NFA765A - HSP) - directly to PCIE0
	2x printed antennas
	RJ45 (2.5GbE)
PCIE:
	1x PCIex4 slot
	1x m.2 E key

Change-Id: I1481e6dd683bdc8163e491aefdf7a54e2c140acb
Signed-off-by: Nirmesh Kumar Singh <quic_nkumarsi@quicinc.com>
(cherry picked from commit 5cc51d53ae8879a1c5103ee928dea6a401484e65)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -122,6 +122,7 @@ dtb-$(CONFIG_ARCH_QCOM)	+= qcs6490-addons-rb3gen2-vision-mezz.dtb
 dtb-$(CONFIG_ARCH_QCOM) += qcs6490-addons-rb3gen2-vision-mezz-hsp.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs6490-rb3gen2.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs6490-rb3gen2-vision-mezzanine.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= qcs8275-iq-8275-evk.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs8300-addons-ride.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs8300-ride.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= qcs8550-addons-aim300-aiot.dtb
